Mostrado el genero correctamente para el becario y cambios en la vista show del user colciencias

--- a/implementacion/app/views/users/show.html.erb
+++ b/implementacion/app/views/users/show.html.erb
@@ -17,8 +17,8 @@
   <dt>Email:</dt>
   <dd><%= @user.email %></dd>
 
-  <dt>Becario:</dt>
-  <dd><%= @user.becario %></dd>
+<!--   <dt>Becario:</dt>
+  <dd><%= @user.becario %></dd> -->
 
 </dl>
 
@@ -30,6 +30,4 @@
   <%= link_to listar_evaluadores_proyectos_path, :class => 'btn btn-default' do %>
   Asignar Evaluador para informe de condonación
   <% end %>
-  <button type="button" class="btn btn-default">Opc2</button>
-  <button type="button" class="btn btn-default">Opc3</button>
 </div>
